# iced_prints

./: Cargo.toml
src/: lib.rs  main.rs
src/styles/: scrollable_styles.rs
src/views/: bar.rs  box_view.rs  carton_view.rs  login.rs  main_ui.rs  mod.rs  setting.rs  tip.rs
src/views/setting_pages/: box_setting_view.rs  carton_setting_view.rs  mod.rs  user_setting_view.rs
